--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: false
 language: scala
 scala: 2.12.1
+jdk: oraclejdk8
 script: sbt coverage test coverageReport
 after_success: bash <(curl -s https://codecov.io/bash)
